# dashboard

./: .editorconfig  .gitignore  .jshintrc  .travis.yml  CMakeLists.txt  Gruntfile.js  README.md  bower.json  deps.launch  documentation.md  get_releases  karma.conf.js  package.json  package.xml  release.sh  start.sh
amicons/flaticon/: README.md  convert
app/: browser.html  index.html  main.js  package.json  script.js
app/scripts/: app.js  battery.js  battery.spec.js  ebuttons-controller.js  ebuttons.js  hardware-button.js  hardware.js  menu.js  ping.js  ros.js  runstop.js  status-controller.js
app/scripts/services/: robot.js
app/styles/: app.css  main.css
atom-shell/: bower.json  package.json
node-webkit/: .gitignore  Gruntfile.js  bower.json
node-webkit/app/: index.html
test/: dummy_publisher.py
updater/: get_releases  update
