<?xml version="1.0"?><package>
  <name>dashboard</name>
  <version>0.2.0</version>
  <description>HTML5 based hardware dashboard for (TU/e) robots</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/tue-robotics/dashboard</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>